src/styles/blocks/nav-mob.scss
.nav-mob {
  display: none;
  justify-content: center;
  padding-top: 138px;
  height: 100vh;
  width: 72%;
  background-color: $c-turquoise;
  transform: translateX(300%);
  transition: transform 0.3s ease-in-out;

  &__item {
    margin-bottom: 15px;
  }

  &__btn-bascet {
    position: relative;
    border: none;
    background: transparent;
    padding: 0;
    font-family: "Manrope", sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    color: $c-gray-light;
    transition: text-shadow 0.3s;
    &::after {
      content: "0";
      position: absolute;
      display: flex;
      align-items: center;
      justify-content: center;
      top: -10px;
      right: -20px;
      width: 14px;
      height: 14px;
      border-radius: 50%;
      background-color: #eb5757;
      font-family: "Bebas Neue", cursive;
      font-weight: 400;
      font-size: 9px;
      line-height: 11px;
      letter-spacing: 0.15em;
      color: $c-gray-light;
    }
    &:hover {
      text-shadow: 2px 2px 2px $c-yellow-light;
    }
  }

  &__linc {
    font-family: "Manrope", sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    color: $c-gray-light;
    transition: text-shadow 0.3s;

    &:hover {
      text-shadow: 2px 2px 2px $c-yellow-light;
    }
  }

  &__btn-close {
    display: block;
    position: absolute;
    bottom: 40%;
    right: 10%;
    transform: rotate(270deg);
    background: transparent;
    border: none;
    outline: none;
    font-family: "Manrope", sans-serif;
    font-size: 12px;
    line-height: 18px;
    text-transform: uppercase;
    color: $c-gray-light;
    cursor: pointer;

    &::before {
      content: "\00d7";
      display: block;
      position: absolute;
      transform: rotate(270deg);
      bottom: -25%;
      left: -130%;
      font-size: 28px;
      line-height: 1.2;
    }

    &::after {
      content: "";
      display: block;
      height: 44px;
      width: 2px;
      background-color: $c-gray-light;
      position: absolute;
      transform: rotate(270deg);
      bottom: -58%;
      left: -42%;
    }
  }
  &__open {
    transform: translateX(0);
    display: flex;
  }
}

